--- a/src/scss/2022/components/_section-header.scss
+++ b/src/scss/2022/components/_section-header.scss
@@ -5,6 +5,7 @@
 @use "../tools/media-queries" as *;
 
 .cmp-section-header {
+  box-sizing: border-box;
   padding: space('10vh') var(--space-limiter-margin);
   margin: 0 calc(var(--space-limiter-margin) * -1);
   position: relative;
